container fix overflow

--- a/scss/common/_container.scss
+++ b/scss/common/_container.scss
@@ -2,7 +2,7 @@
   margin: auto;
   max-width: 1720px;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .container {
@@ -11,5 +11,5 @@
   max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
