--- a/scss/content/_slider.scss
+++ b/scss/content/_slider.scss
@@ -13,7 +13,7 @@
   margin-left: auto;
   padding-left: 15px;
   min-height: 1000px;
-  padding-top: 339px; // 81px is height of header
+  padding-top: 342px; // 81px is height of header
 
   &__group-1 {
     display: flex;
